# strands-utcp

./: LICENSE  README.md  pyproject.toml
examples/: basic_usage.py
src/strands_utcp/: __init__.py  utcp_tool_adapter.py  utcp_tool_provider.py
tests/: test_utcp_tool_adapter.py  test_utcp_tool_provider.py
