[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strands-utcp"
version = "0.1.1"
description = "Universal Tool Calling Protocol (UTCP) integration for Strands Agents SDK"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "UTCP Community", email = "community@utcp.dev" }
]
keywords = ["strands", "agents", "utcp", "tools", "ai", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "strands-agents",
    "utcp>=1.0.0",
    "utcp-http>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/universal-tool-calling-protocol/strands-utcp"
Documentation = "https://github.com/universal-tool-calling-protocol/strands-utcp#readme"
Repository = "https://github.com/universal-tool-calling-protocol/strands-utcp"
Issues = "https://github.com/universal-tool-calling-protocol/strands-utcp/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "build",
    "twine",
]

[tool.hatch.build.targets.wheel]
packages = ["src/strands_utcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"

[tool.black]
line-length = 120
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 120

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
